# Godsapp

./: .replit  CHANGELOG.md  DISCLAIMER.md  README.md  STATUS.md  pnpm-lock.yaml  replit.md
godsapp/: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  uninstall.sh
godsapp/godsapp/: __init__.py  __main__.py
godsapp/godsapp/api/: server.py
godsapp/godsapp/app/: application.py
godsapp/godsapp/cli/: main.py
godsapp/godsapp/core/: audio.py  audit.py  dedup.py  evidence.py  health.py  jsonx.py  learn.py  logging.py  paths.py  plugins.py  reports.py  scans.py  scheduler.py  settings.py  templates.py  tool_catalog.py  tool_detect.py  updater.py  workspaces.py
godsapp/godsapp/db/: __init__.py  engine.py  models.py
godsapp/godsapp/db/migrations/: __init__.py
godsapp/godsapp/plugins/: __init__.py
godsapp/godsapp/resources/css/: style.css
godsapp/godsapp/tools/: __init__.py  base.py  registry.py
godsapp/godsapp/tools/cloud/: __init__.py  tools.py
godsapp/godsapp/tools/crypto/: __init__.py  tools.py
godsapp/godsapp/tools/exploit/: __init__.py  tools.py
godsapp/godsapp/tools/forensics/: __init__.py  tools.py
godsapp/godsapp/tools/malware/: __init__.py  tools.py
godsapp/godsapp/tools/mobile/: __init__.py  tools.py
godsapp/godsapp/tools/network/: __init__.py  extra.py  tools.py
godsapp/godsapp/tools/osint/: __init__.py  tools.py
godsapp/godsapp/ui/: command_palette.py  header_helpers.py  login.py  main_window.py  matrix.py  missing_tools_dialog.py  onboarding.py  sidebar.py  storm.py  terminal_overlay.py  updater_dialog.py
godsapp/packaging/appimage/: AppImageBuilder.yml
godsapp/packaging/arch/: PKGBUILD
godsapp/packaging/debian/: changelog  control  godsapp-api.service  godsapp.desktop  rules
godsapp/packaging/flatpak/: com.sierengowski.GodsApp.yml
godsapp/scripts/: gen_thunder.py
godsapp/tests/: test_smoke.py
(+107 files in other folders)
