[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godsapp"
version = "0.3.3"
description = "GodsApp — Professional security auditing and research suite (native GTK4 Linux desktop application)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
authors = [{ name = "Joseph Sierengowski" }]
keywords = ["security", "pentest", "audit", "research", "gtk4", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "PyGObject>=3.48",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "dnspython>=2.6",
    "psutil>=5.9",
    "platformdirs>=4.2",
    "python-dateutil>=2.9",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
godsapp = "godsapp.app.application:main"
godsapp-cli = "godsapp.cli.main:cli"

[project.urls]
Homepage = "https://github.com/jsierengowski/godsapp"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["godsapp*"]

[tool.setuptools.package-data]
"godsapp" = [
    "resources/*",
    "resources/css/*.css",
    "resources/icons/*.svg",
    "resources/icons/*.png",
    "resources/**/*",
]
